# eyeclaude

./: README.md  pyproject.toml
.claude/: settings.local.json
commands/: eyeclaude-register.md  eyeclaude-unregister.md
docs/superpowers/plans/: 2026-03-27-eyeclaude-plan.md  2026-03-27-eyeclaude-v2-plan.md
docs/superpowers/specs/: 2026-03-27-eyeclaude-design.md  2026-03-27-eyeclaude-v2-registration-design.md
src/eyeclaude/: __init__.py  calibration.py  calibration_overlay.py  cli.py  config.py  eye_tracker.py  hooks.py  overlay.py  pipe_server.py  shared_state.py  status_monitor.py  statusline_wrapper.py  terminal_discovery.py  window_manager.py
tests/: conftest.py  test_calibration.py  test_calibration_overlay.py  test_config.py  test_eye_tracker.py  test_integration.py  test_overlay.py  test_pipe_server.py  test_shared_state.py  test_status_monitor.py  test_statusline_wrapper.py  test_terminal_discovery.py  test_window_manager.py
